# Siren

./: .gitignore  LICENSE  README.md  pyproject.toml  siren.py
core/: __init__.py  agents.py  api_security.py  apk_analyzer.py  attack_graph.py  auth_engine.py  cloud_jwt_scanner.py  constants.py  crypto.py  dynamic_mobile.py  engine.py  exploits.py  fuzzer.py  information_theory.py  mobile_engine.py  mobile_payloads.py  models.py  network.py  orchestrator.py  payloads.py  pentest_api_integration.py  pentest_engine.py  pipeline.py  recon.py  reporter.py  scanner.py  threat_intel.py  workspace.py
core/arsenal/: __init__.py  ad_attack.py  cloud_attack.py  container_security.py  dast_engine.py  firmware_analyzer.py  graphql_engine.py  iot_engine.py  llm_attack.py  network_exploiter.py  protocol_dissector.py  sast_engine.py  supply_chain.py  websocket_engine.py
core/automation/: __init__.py  campaign_manager.py  continuous_monitor.py  result_correlator.py
core/cortex/: __init__.py  adversarial_ml.py  attack_persona.py  attack_planner.py  bayesian_engine.py  cognitive_reasoner.py  exploit_synthesis.py  knowledge_graph.py  vuln_dna.py
core/evasion/: __init__.py  ids_evasion.py  payload_obfuscator.py  waf_bypass.py
core/intelligence/: __init__.py  attack_narrative.py  cve_predictor.py  deep_fingerprint.py  defensive_mirror.py  osint_correlator.py  social_engineering.py  threat_hunting.py
core/meta/: __init__.py  performance_profiler.py  self_evolution.py  strategy_db.py
core/output/: __init__.py  compliance_mapper.py  remediation_generator.py  risk_scorer.py
