[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "siren"
version = "1.0.0"
description = "SIREN — Shannon Intelligence Recon & Exploitation Nexus. Autonomous cognitive offensive security engine with Bayesian inference, vulnerability genetics, exploit chain synthesis, and self-evolving attack strategies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "security", "pentesting", "offensive-security", "vulnerability-scanner",
    "exploit-development", "red-team", "bug-bounty", "autonomous-security",
    "bayesian-inference", "cognitive-security", "ai-pentesting",
    "vulnerability-research", "web-security", "network-security",
    "mitre-attack", "penetration-testing", "threat-intelligence",
    "security-automation", "exploit-chain", "waf-bypass",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.scripts]
siren = "siren:main"

[project.urls]
Repository = "https://github.com/kinshua/siren"

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["core"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B011", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
